--- base64-conduit.cabal.orig	2012-12-05 15:23:54.922268638 +0100
+++ base64-conduit.cabal	2012-12-05 15:25:02.919998150 +0100
@@ -18,7 +18,7 @@
                      , bytestring               >= 0.9
                      , base64-bytestring        >= 0.1.1.1
                      , conduit                  >= 0.5          && < 0.6
-  ghc-options:     -Wall
+  ghc-options:     -Wall -XRankNTypes
 
 test-suite test
     hs-source-dirs: test
@@ -33,7 +33,7 @@
                    , base64-conduit
                    , base64-bytestring
                    , transformers
-    ghc-options:     -Wall
+    ghc-options:     -Wall -XRankNTypes
 
 source-repository head
   type:     git
