--- crypto-conduit.cabal.orig	2013-02-19 04:54:50.292579185 +0100
+++ crypto-conduit.cabal	2013-02-19 04:56:03.475054997 +0100
@@ -41,7 +41,7 @@
     Build-depends: crypto-api >= 0.8 && < 0.9
     CPP-options:   -DOLD_CRYPTO_API
   else
-    Build-depends: crypto-api >= 0.9 && < 0.11
+    Build-depends: crypto-api >= 0.9 && < 0.12
   GHC-options: -Wall
 
 Test-suite runtests
