--- digestive-functors-blaze.cabal.orig	2013-03-03 00:06:57.432125733 +0100
+++ digestive-functors-blaze.cabal	2013-03-03 00:07:30.439302846 +0100
@@ -18,7 +18,7 @@
 
   Build-depends:
     base               >= 4    && < 5,
-    blaze-html         >= 0.5  && < 0.6,
+    blaze-html         >= 0.5  && < 0.7,
     blaze-markup       >= 0.5  && < 0.6,
     digestive-functors >= 0.6  && < 0.7,
     text               >= 0.11 && < 0.12
