--- filestore.cabal.orig	2013-02-28 19:17:27.147902351 +0100
+++ filestore.cabal	2013-02-28 19:17:50.181591864 +0100
@@ -43,7 +43,7 @@
                          time >= 1.1 && < 1.5,
                          xml >= 1.3 && < 1.4,
                          split >= 0.1 && < 0.3,
-                         Diff >= 0.2 && < 0.3,
+                         Diff >= 0.2 && < 0.4,
                          old-locale >= 1.0 && < 1.1
 
     Exposed-modules:     Data.FileStore, Data.FileStore.Types, Data.FileStore.Git, Data.FileStore.Darcs, Data.FileStore.Mercurial,
