--- gitit.cabal.orig	2013-03-03 00:04:54.016883846 +0100
+++ gitit.cabal	2013-03-03 00:05:15.063875987 +0100
@@ -165,7 +165,7 @@
                      feed >= 0.3.6 && < 0.4,
                      xss-sanitize >= 0.3 && < 0.4,
                      tagsoup >= 0.12 && < 0.13,
-                     blaze-html >= 0.4 && < 0.6,
+                     blaze-html >= 0.4 && < 0.7,
                      json >= 0.4 && < 0.8
   if impl(ghc >= 6.10)
     build-depends:   base >= 4, syb
