--- hakyll.cabal.orig	2013-02-23 23:38:22.828730105 +0100
+++ hakyll.cabal	2013-02-23 23:39:27.739733860 +0100
@@ -94,8 +94,8 @@
     deepseq      >= 1.3    && < 1.4,
     directory    >= 1.0    && < 1.3,
     filepath     >= 1.0    && < 1.4,
-    http-conduit >= 1.8    && < 1.9,
-    http-types   >= 0.7    && < 0.8,
+    http-conduit >= 1.8 ,
+    http-types   >= 0.7    && < 0.9,
     lrucache     >= 1.1.1  && < 1.2,
     mtl          >= 1      && < 2.2,
     old-locale   >= 1.0    && < 1.1,
