--- hakyll.cabal.orig	2013-03-03 00:03:03.955181746 +0100
+++ hakyll.cabal	2013-03-03 00:04:34.599916911 +0100
@@ -85,7 +85,7 @@
   Build-Depends:
     base         >= 4      && < 5,
     binary       >= 0.5    && < 0.7,
-    blaze-html   >= 0.5    && < 0.6,
+    blaze-html   >= 0.5    && < 0.7,
     blaze-markup >= 0.5.1  && < 0.6,
     bytestring   >= 0.9    && < 0.11,
     citeproc-hs  >= 0.3.2  && < 0.4,
@@ -94,8 +94,8 @@
     deepseq      >= 1.3    && < 1.4,
     directory    >= 1.0    && < 1.3,
     filepath     >= 1.0    && < 1.4,
-    http-conduit >= 1.8    && < 1.9,
-    http-types   >= 0.7    && < 0.8,
+    http-conduit >= 1.8,
+    http-types   >= 0.7,
     lrucache     >= 1.1.1  && < 1.2,
     mtl          >= 1      && < 2.2,
     old-locale   >= 1.0    && < 1.1,
@@ -184,7 +184,7 @@
     -- Copy pasted from hakyll dependencies:
     base         >= 4      && < 5,
     binary       >= 0.5    && < 0.7,
-    blaze-html   >= 0.5    && < 0.6,
+    blaze-html   >= 0.5    && < 0.7,
     blaze-markup >= 0.5.1  && < 0.6,
     bytestring   >= 0.9    && < 0.11,
     citeproc-hs  >= 0.3.2  && < 0.4,
@@ -193,8 +193,8 @@
     deepseq      >= 1.3    && < 1.4,
     directory    >= 1.0    && < 1.3,
     filepath     >= 1.0    && < 1.4,
-    http-conduit >= 1.8    && < 1.9,
-    http-types   >= 0.7    && < 0.8,
+    http-conduit >= 1.8,
+    http-types   >= 0.7,
     lrucache     >= 1.1.1  && < 1.2,
     mtl          >= 1      && < 2.2,
     old-locale   >= 1.0    && < 1.1,
