--- hakyll.cabal.orig	2013-04-03 17:15:59.661183262 +0200
+++ hakyll.cabal	2013-04-03 17:16:09.601013061 +0200
@@ -142,7 +142,7 @@
     bytestring   >= 0.9    && < 0.11,
     citeproc-hs  >= 0.3.2  && < 0.4,
     containers   >= 0.3    && < 0.6,
-    cryptohash   >= 0.7    && < 0.9,
+    cryptohash   >= 0.7    && < 1,
     data-default >= 0.4    && < 0.6,
     deepseq      >= 1.3    && < 1.4,
     directory    >= 1.0    && < 1.3,
