--- heist.cabal.orig	2012-12-17 22:53:53.854399384 +0100
+++ heist.cabal	2012-12-17 22:55:44.032794594 +0100
@@ -149,7 +149,7 @@
     dlist                      >= 0.5     && < 0.6,
     errors                     >= 1.3     && < 1.4,
     filepath                   >= 1.3     && < 1.4,
-    hashable                   >= 1.1     && < 1.2,
+    hashable                   >= 1.1     && < 1.3,
     mtl                        >= 2.0     && < 2.2,
     process                    >= 1.1     && < 1.2,
     random                     >= 1.0.1.0 && < 1.1,
@@ -158,7 +158,6 @@
     unordered-containers       >= 0.1.4   && < 0.3,
     vector                     >= 0.9     && < 0.11,
     xmlhtml                    >= 0.1.6   && < 0.3
-
   if impl(ghc >= 6.12.0)
     ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                  -fno-warn-unused-do-bind
