--- heist.cabal.orig	2013-02-06 21:50:24.505607958 +0100
+++ heist.cabal	2013-02-06 21:50:48.282642302 +0100
@@ -147,7 +147,7 @@
     directory                  >= 1.1     && < 1.3,
     directory-tree             >= 0.10    && < 0.12,
     dlist                      >= 0.5     && < 0.6,
-    errors                     >= 1.3     && < 1.4,
+    errors                     >= 1.3     && < 1.5,
     filepath                   >= 1.3     && < 1.4,
     hashable                   >= 1.1     && < 1.3,
     mtl                        >= 2.0     && < 2.2,
