--- heist.cabal.orig	2013-02-23 23:33:48.141148732 +0100
+++ heist.cabal	2013-02-23 23:34:19.208295925 +0100
@@ -141,7 +141,7 @@
     attoparsec                 >= 0.10    && < 0.11,
     base                       >= 4       && < 5,
     blaze-builder              >= 0.2     && < 0.4,
-    blaze-html                 >= 0.4     && < 0.6,
+    blaze-html                 >= 0.4     && < 0.7,
     bytestring                 >= 0.9     && < 0.11,
     containers                 >= 0.2     && < 0.6,
     directory                  >= 1.1     && < 1.3,
