--- snap-extras.cabal.orig	2013-02-08 02:45:19.211664773 +0100
+++ snap-extras.cabal	2013-02-08 02:45:47.792106750 +0100
@@ -43,7 +43,7 @@
     , digestive-functors >= 0.3
     , digestive-functors-snap >= 0.3
     , directory-tree >= 0.10 && < 0.12
-    , errors >= 1.3.1 && < 1.4
+    , errors >= 1.3.1 && < 1.5
     , filepath
     , heist >= 0.10
     , mtl >= 2.0 && < 2.2
