--- snap-loader-static.cabal.orig	2012-10-31 14:01:49.845349151 +0100
+++ snap-loader-static.cabal	2012-10-31 14:02:10.822733005 +0100
@@ -25,7 +25,7 @@
 
   build-depends:
     base              >= 4       && < 5,
-    template-haskell  >= 2.2     && < 2.8
+    template-haskell  >= 2.2     && < 2.8.1
 
   if impl(ghc >= 6.12.0)
     ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
