--- snap.cabal.orig	2013-03-15 09:26:42.102593886 +0100
+++ snap.cabal	2013-03-15 09:26:58.748975331 +0100
@@ -165,7 +165,7 @@
     snap-core                 >= 0.9      && < 0.10,
     snap-server               >= 0.9      && < 0.10,
     stm                       >= 2.2      && < 2.5,
-    syb                       >= 0.1      && < 0.4,
+    syb                       >= 0.1      && < 0.5,
     text                      >= 0.11     && < 0.12,
     time                      >= 1.1      && < 1.5,
     transformers              >= 0.2      && < 0.4,
