--- snap.cabal.orig	2013-03-28 17:16:24.730746438 +0100
+++ snap.cabal	2013-03-28 17:17:12.336557442 +0100
@@ -165,7 +165,7 @@
     snap-core                 >= 0.9      && < 0.10,
     snap-server               >= 0.9      && < 0.10,
     stm                       >= 2.2      && < 2.5,
-    syb                       >= 0.1      && < 0.4,
+    syb                       >= 0.1      && < 0.5,
     text                      >= 0.11     && < 0.12,
     time                      >= 1.1      && < 1.5,
     transformers              >= 0.2      && < 0.4,
@@ -182,7 +182,7 @@
   else
     build-depends:
       base                      >= 4.4      && < 5,
-      lens                      >= 3.7.6    && < 3.9
+      lens                      >= 3.7.6    && < 4
 
   extensions:
     BangPatterns,
