--- snap.cabal.orig	2013-04-02 00:05:52.261046588 +0200
+++ snap.cabal	2013-04-02 00:06:43.066805145 +0200
@@ -146,7 +146,7 @@
     attoparsec                >= 0.10     && < 0.11,
     bytestring                >= 0.9.1    && < 0.11,
     cereal                    >= 0.3      && < 0.4,
-    clientsession             >= 0.8      && < 0.9,
+    clientsession             >= 0.8      && < 1,
     comonad                   >= 1.1      && < 3.1,
     configurator              >= 0.1      && < 0.3,
     containers                >= 0.3      && < 0.6,
@@ -165,7 +165,7 @@
     snap-core                 >= 0.9      && < 0.10,
     snap-server               >= 0.9      && < 0.10,
     stm                       >= 2.2      && < 2.5,
-    syb                       >= 0.1      && < 0.4,
+    syb                       >= 0.1      && < 0.5,
     text                      >= 0.11     && < 0.12,
     time                      >= 1.1      && < 1.5,
     transformers              >= 0.2      && < 0.4,
@@ -182,7 +182,7 @@
   else
     build-depends:
       base                      >= 4.4      && < 5,
-      lens                      >= 3.7.6    && < 3.9
+      lens                      >= 3.7.6    && < 4
 
   extensions:
     BangPatterns,
