--- snaplet-acid-state.cabal.orig	2013-01-31 01:05:57.935000554 +0100
+++ snaplet-acid-state.cabal	2013-01-31 01:06:04.725105609 +0100
@@ -27,7 +27,7 @@
   build-depends:
     acid-state                >= 0.6     && < 0.9,
     base                      >= 4       && < 5,
-    snap                      >= 0.6     && < 0.11,
+    snap                      >= 0.6     && < 0.12,
     text                      >= 0.11    && < 0.12
 
   ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
