Index: habs-web/snaplet-postgresql-simple.cabal
===================================================================
--- habs-web.orig/snaplet-postgresql-simple.cabal
+++ habs-web/snaplet-postgresql-simple.cabal
@@ -39,7 +39,7 @@ Library
     bytestring                 >= 0.9.1   && < 0.11,
     clientsession              >= 0.7.2   && < 0.9,
     configurator               >= 0.2     && < 0.3,
-    errors                     >= 1.3     && < 1.4,
+    errors                     >= 1.3     && < 1.5,
     MonadCatchIO-transformers  >= 0.3     && < 0.4,
     mtl                        >= 2       && < 3,
     postgresql-simple          >= 0.2     && < 0.3,
