--- snaplet-postgresql-simple.cabal.orig	2013-04-02 01:46:56.006654137 +0200
+++ snaplet-postgresql-simple.cabal	2013-04-02 01:47:13.516345382 +0200
@@ -37,7 +37,7 @@
   build-depends:
     base                       >= 4       && < 5,
     bytestring                 >= 0.9.1   && < 0.11,
-    clientsession              >= 0.7.2   && < 0.9,
+    clientsession              >= 0.7.2   && < 1,
     configurator               >= 0.2     && < 0.3,
     errors                     >= 1.4     && < 1.5,
     MonadCatchIO-transformers  >= 0.3     && < 0.4,
