--- snaplet-sqlite-simple.cabal.orig	2013-04-02 00:09:22.080629152 +0200
+++ snaplet-sqlite-simple.cabal	2013-04-02 00:09:51.193441974 +0200
@@ -50,7 +50,7 @@
     aeson                      >= 0.6     && < 0.7,
     base                       >= 4       && < 5,
     bytestring                 >= 0.9.1   && < 0.11,
-    clientsession              >= 0.8     && < 0.9,
+    clientsession              >= 0.8     && < 1,
     configurator               >= 0.2     && < 0.3,
     MonadCatchIO-transformers  >= 0.3     && < 0.4,
     mtl                        >= 2       && < 3,
