--- swish.cabal.orig	2013-01-11 17:55:22.770605228 +0100
+++ swish.cabal	2013-01-11 17:55:48.737677492 +0100
@@ -89,7 +89,7 @@
       network >= 2.2 && < 2.5,
       old-locale == 1.0.*, 
       polyparse >= 1.6 && < 1.9,
-      semigroups >= 0.5 && < 0.9,
+      semigroups >= 0.5 && < 0.10,
       text == 0.11.*,
       time >= 1.1 && < 1.5
 
